tests/codegen/errors/reader/quote-feature-postfix/atom.reader.error.reader.empty.unquote/reader-empty-unquote.mon
;; TEST-ID: tests.codegen.reader-error.reader-empty-unquote
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/quote-feature-postfix
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Empty unquote ⌞⌟ — expected an expression inside
;; TEST-ATOM: atom.reader.error.reader.empty.unquote
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.empty.unquote
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Empty unquote ⌞⌟ — expected an expression inside
;; TEST-READER-PATH: reader.c:6862 parser.quasiquote
;; TEST-CODEGEN-PATH: diagnostic.parser.quasiquote
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:6862 Empty unquote ⌞⌟ — expected an expression inside
;; TEST-USES-ATOM: atom.reader.error.reader.empty.unquote
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.quasiquote
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/quote-feature-postfix/atom.reader.error.reader.empty.unquote
;; TEST-MENU-PATH: codegen/errors/reader/quote-feature-postfix/atom.reader.error.reader.empty.unquote
;; TEST-ATOM-LEAF: atom.reader.error.reader.empty.unquote
;; TEST-CLI-TARGET: codegen errors reader quote-feature-postfix

(module Main)
(show ⌜a ⌞⌟ b⌝)
